@@ -1,3 +1,11 @@
+2006-11-03  Edward Hervey  <edward@fluendo.com>
+
+	* gnl/gnlcomposition.c: (handle_seek_event),
+	(gnl_composition_event_handler), (update_start_stop_duration):
+	If we have a default source, the composition start value is always 0.
+	Don't rely on incoming seek event, create a new one from calculated
+	values.
+
 2006-11-02  Edward Hervey  <edward@fluendo.com>
 
 	* gnl/gnlcomposition.c: (convert_list_to_tree):
